<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="welcome_one_text">"Welcome to the Shoe Store App! \nThe most comprehensive Shoe Shop in the Android World!   </string>
    <string name="welcome_two_text">"In the next screen, we'll show you how to use the app! \nLet's go!   </string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="lets_get_you_started">"Let's get you started!"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_email_text">Enter email address</string>
    <string name="login_password_text">Enter password</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">LOGIN</string>
    <string name="register_button">REGISTER</string>
    <string name="title_app_name">SHOE STORE APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="shoe_name">Shoe Name:</string>
    <string name="shoe_size">Size:</string>
    <string name="shoe_size_list"><b>SIZE: </b> %1$s</string>
    <string name="company_text">Company:</string>
    <string name="image_url_text">Image URL:</string>
    <string name="company_text_list"><b>COMPANY: </b> %1$s</string>
    <string name="images_text_list"><b>IMAGE URL: </b> %1$s</string>
    <string name="description_text">Description:</string>
    <string name="description_text_list"><b>DESCRIPTION: </b> %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="logout">Log Out</string>
    <string name="instruction_one">In the next Screen you will find a List of Shoes with their corresponding Attributes</string>
    <string name="instruction_two">To create a new Shoe, press the "+" button at the bottom of the screen!</string>
    <string name="next">Next</string>
    <string name="new_shoe_image">New Shoe image</string>
    <string name="list_empty_text">There are no shows to display. \nGet started by creating a new shoe!</string>
    <string name="login_label">SHOE STORE APP</string>
    <string name="welcome_label">WELCOME!</string>
    <string name="instructions_label">INSTRUCTIONS</string>
    <string name="list_label">LIST OF SHOES</string>
    <string name="details_label">CREATE A NEW SHOE!</string>
</resources>
