<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.LoginFragment">

    <data>
        <variable
            name="user"
            type="com.udacity.shoestore.models.User" />
    </data>

    <!-- using constraint layout so I can have the views floating in the screen-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_back_image"
        android:paddingLeft="@dimen/fragment_padding"
        android:paddingTop="@dimen/fragment_padding"
        android:paddingRight="@dimen/fragment_padding"
        android:paddingBottom="@dimen/fragment_padding">

        <TextView
            android:id="@+id/password_text"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/login_password_text"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/username"
            tools:layout_editor_absoluteX="25dp" />

        <EditText
            android:id="@+id/username"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/login_textbox"
            android:ems="10"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:text="@={user.email}"
            android:imeOptions="actionDone"
            app:layout_constraintBottom_toTopOf="@+id/password_text"
            app:layout_constraintTop_toBottomOf="@+id/email_text"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/password"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/login_textbox"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:text="@={user.password}"
            android:imeOptions="actionDone"
            app:layout_constraintBottom_toTopOf="@+id/register_button"
            app:layout_constraintTop_toBottomOf="@+id/password_text"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/email_text"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/login_email_text"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/login_title_app_name"
            app:layout_constraintVertical_chainStyle="packed"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/login_button"
            style="@style/buttons_style"
            android:layout_width="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/rounded_button_secondary"
            android:text="@string/login_button_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/register_button"
            app:layout_constraintEnd_toStartOf="@+id/register_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/register_button"
            style="@style/buttons_style"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button_primary"
            android:text="@string/register_button"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/login_button" />

        <TextView
            android:id="@+id/login_title_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/title_app_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>